# rules_s3

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
.bcr/: metadata.template.json
.github/workflows/: ci.yml
docs/: BUILD.bazel
examples/: BUILD.bazel
examples/bazel_5/: .bazelrc  WORKSPACE
examples/full/: .bazelrc  BUILD.bazel  MODULE.bazel
examples/tweag-credential-helper/: MODULE.bazel
s3/: extensions.bzl  repo_rules.bzl
s3/private/: BUILD.bazel  util.bzl
s3/private/extensions/: BUILD.bazel  s3_bucket.bzl
s3/private/repo_rules/: BUILD.bazel  eager.bzl  hub_repo.bzl  s3_archive.bzl  s3_file.bzl
s3/private/rules/: BUILD.bazel  augmented_blob.bzl  copy.bzl  symlink.bzl
tests/unit/jsonpath/: test_jsonpath.bzl
tests/unit/url_encoding/: test_url_encoding.bzl
tools/: credential-helper
