load("@stardoc//stardoc:stardoc.bzl", "stardoc")

stardoc(
    name = "repo_rules",
    out = "repo_rules.md",
    input = "//s3:repo_rules.bzl",
    deps = ["//s3/private/repo_rules"],
)

stardoc(
    name = "extensions",
    out = "extensions.md",
    input = "//s3:extensions.bzl",
    deps = ["//s3/private/extensions"],
)

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
