module(
    name = "tweag_credential_helper_example",
    version = "0.0.0",
)

bazel_dep(
    name = "rules_s3",
    version = "0.0.0",
)
local_path_override(
    module_name = "rules_s3",
    path = "../..",
)

bazel_dep(
    name = "tweag-credential-helper",
    version = "0.0.1",
)

# This adds a dependency on a private S3 bucket
# You need to run the following command once as a setup:
#
#     bazel run @tweag-credential-helper//installer
#
s3_bucket = use_extension("@rules_s3//s3:extensions.bzl", "s3_bucket")
s3_bucket.from_file(
    name = "hello_world",
    bucket = "rules_s3",
    lockfile = "//:s3_lock.json",
)

use_repo(s3_bucket, "hello_world")
